--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@types/p5": "^1.4.2",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "antd": "^4.19.5",
+    "bootstrap": "^5.1.3",
     "p5": "^1.4.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.9"
   }
 }
