--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.1.3",
+    "circular-dependency-plugin": "^5.2.2",
     "p5": "^1.4.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.1.9"
+    "@types/bootstrap": "^5.1.9",
+    "@types/circular-dependency-plugin": "^5.0.5"
   }
 }
